usecallback優化list-form及處理register-form的基本架構

--- a/next-bs5-main/components/article/option.module.sass
+++ b/next-bs5-main/components/article/option.module.sass
@@ -15,13 +15,18 @@
     border-left: 1px solid #B29564
     border-right: 1px solid #B29564
     li
-      padding: 8px
+      // padding: 8px
       height: var(--option-height)
       background-color: #003E52
       &:hover
         background-color: #003445
     a
       display: block
+      align-content: center
+      padding-left: 8px
+      // padding: inherit
+      box-sizing: border-box
+      width: 100%
       height: 100%
       text-decoration: none
       color: #e1ded8
@@ -37,7 +42,7 @@
 
 .articlechoose
   position: relative
-  --option-height: 35px
+  --option-height: 40px
   width: 200px
   label
     padding: 2px
