--- a/next-bs5-main/styles/star.scss
+++ b/next-bs5-main/styles/star.scss
@@ -11,3 +11,9 @@
   align-items: center;
   padding: 0 1vw;
 }
+.star-middle{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 12.50vw;
+}
